2013-01-13  Alan Cutter  <alancutter@chromium.org>

        Allow users to misspell the "sheriffs" command in sheriffbot
        https://bugs.webkit.org/show_bug.cgi?id=106628

        Reviewed by Steve Block.

        * Scripts/webkitpy/tool/bot/irc_command.py:

2013-01-13  Alan Cutter  <alancutter@chromium.org>

        Make "gardeners" an alias for "sheriffs" in sherrifbot
        https://bugs.webkit.org/show_bug.cgi?id=106627

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/tool/bot/irc_command.py:

2013-01-13  Dirk Pranke  <dpranke@chromium.org>

        [chromium] webkitpy-test: executive.py stringify_args error on the release test bot
        https://bugs.webkit.org/show_bug.cgi?id=105380

        Reviewed by Eric Seidel.

        Fix a regression introduced in r137692 where we were double-encoding
        the arguments to popen(); this was only an issue on windows, where
        we would try to encode something to mbcs, then try to encode it
        to unicode as if the input as ascii.

        * Scripts/webkitpy/common/system/executive.py:
        (Executive.run_command):

2013-01-13  Alan Cutter  <alancutter@chromium.org>

        State who told sheriffbot to roll the Chromium deps and to what revision
        https://bugs.webkit.org/show_bug.cgi?id=106626

        Reviewed by Eric Seidel.

        Added optional argument to post-chromium-deps-roll so Sheriffbot can specify ChangeLog message.

        * Scripts/webkitpy/tool/bot/irc_command.py:
        (RollChromiumDEPS._expand_irc_nickname):
        (RollChromiumDEPS.execute):
        * Scripts/webkitpy/tool/bot/irc_command_unittest.py:
        (IRCCommandTest.test_roll_chromium_deps):
        * Scripts/webkitpy/tool/bot/sheriff.py:
        (Sheriff.post_chromium_deps_roll):
        * Scripts/webkitpy/tool/commands/roll.py:
        (RollChromiumDEPS._prepare_state):
        (PostChromiumDEPSRoll):
        (PostChromiumDEPSRoll._prepare_state):